dnl -*- m4 -*-
dnl $Id: configure.ac,v 1.1.1.1 2004-04-10 13:35:03 sbooth Exp $

dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(libconfig, 0.1)
AC_CONFIG_SRCDIR(src/libconfig.h)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AC_REVISION([$Revision: 1.1.1.1 $])
AC_PREFIX_DEFAULT(/usr)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile demo/Makefile])
AC_OUTPUT
