## $Id: Makefile.am,v 1.2 2004-04-14 06:58:34 sbooth Exp $

CLEANFILES = *~

lib_LTLIBRARIES = libconfig.la
libconfig_la_SOURCES = config_parse.c make_pair.c config_release.c	\
config_get.c config_iterate.c config_iterate_reset.c
libconfig_la_LDFLAGS = -version-info 0:0:0

include_HEADERS = libconfig.h
